--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 -->
 <h1>Isso é um titulo</h1>
 
-<img src="https://lc-public-assets.s3.sa-east-1.amazonaws.com/images/Cover/LetsCodeCover.png" hidden>
+<img src="https://lc-public-assets.s3.sa-east-1.amazonaws.com/images/Cover/LetsCodeCover.png" alt="Let's Code!">
 <!-- tag de imagem obrigatorio uso do src
 que armazena o caminho da onde a imagem está hospedada, seja em cloud ou arquivo em pastas-->
 
@@ -65,3 +65,10 @@ https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/input
 <div class="title">
   <p title="pareiomouse">title</p>
 </div>
+<a href="https://www.linkedin.com/in/leonardodf95">Leonardo</a>
+
+<p>If you need to relax, press the
+  <strong><u>S</u></strong>tress reliever!</p>
+  
+  <button accesskey="s">Stress reliever</button>
+  
